--- a/iot-applications.html
+++ b/iot-applications.html
@@ -1,13 +1,168 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="description" content="A web page about IoT Applications" />
     <meta name="author" content="ENTER YOUR NAME HERE" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>IoT Applications</title>
-  </head>
-  <body>
-    <h1>IoT Applications</h1>
-  </body>
+    <link rel="stylesheet" href="system.css">
+
+</head>
+
+<body>
+    <header>
+        <h1>SIT209 </h1>
+        <h2>IoT Application</h2>
+
+
+    </header>
+
+    <h1 class="act1">ACTIVITY 1</h1>
+    <img src="/images/iot.webp" alt="">
+    <p class="yyy">A software programme known as an IoT (Internet of Things) application is created to run on sensors
+        and connected
+        devices,
+        allowing them to gather, transmit,
+        and act on data they produce or receive from other devices in the network.
+        Applications for the Internet of Things are frequently utilised in fields including smart cities, wearable
+        technology, industrial control systems,
+        and home automation, among others. These programmes are designed to provide effective, automated,
+        and real-time administration of connected devices and the data they provide.
+    </p>
+    <p class=" kkk">
+        main features needed in an IoT application are -
+
+    </p>
+    <p>
+
+    <ul class="vvv">
+        <li id="q">Connectivity</li>
+        <li id="w">Data Collection and Management</li>
+        <li id="e">Scalability</li>
+        <li id="r">Real-time Processing</li>
+        <li id="t">Security</li>
+    </ul>
+    </p>
+    <hr>
+    <h1 class="act2">ACTIVITY 2</h1>
+
+
+    <img class="mmm" src="/images/smart-buildings-safety-public-security.jpg" alt="">
+    <p class="ooo">A smart building is a facility equipped with advanced technologies to optimize its operational and
+        energy efficiency,
+        comfort, and safety. These technologies include Internet of Things (IoT)
+        snsors, building automation systems, and data analytics software that collect
+        and analyze information about the building's usage and performance.
+        The goal of a smart building is to improve its operational efficiency,
+        reduce costs, and provide a better environment for occupants.</p>
+
+    <div class="p1">
+
+        smart building scenarios where this will be beneficial
+
+        <ul>
+            <li>Energy Management</li>
+            <li>Occupant Comfort and Safety</li>
+            <li>Asset Management</li>
+            <li>Security</li>
+            <li>Accessibility</li>
+            <li>Sustainability</li>
+            <li>Cost Savings</li>
+
+
+
+
+        </ul>
+
+
+    </div>
+
+    <div class="p2">
+
+        parts needed for smart building to word
+
+
+        <ul>
+            <li>Building Management System (BMS)</li>
+            <li>Sensors</li>
+            <li>Internet of Things (IoT) devices</li>
+            <li>Network infrastructure</li>
+            <li>Data analytics</li>
+            <li>User interfaces</li>
+            <li>Power supply</li>
+        </ul>
+
+
+
+    </div>
+
+    <hr>
+    <hr>
+
+    <h1 class="act3">ACTIVITY 3</h1>
+
+    <img class="bbb" src="/images/what-is-building-automation-628x353.webp" alt="">
+
+    <div class="p3">
+
+
+        <P>A smart building IoT control interface would typically require the following high-level features:</P>
+
+        <UL>
+            <li>Real-time monitoring and control of building systems such as heating, cooling, lighting, and security.
+            </li>
+            <li>Energy management and optimization to reduce waste and lower costs.</li>
+            <li>Integration with other building systems such as fire alarms and elevators.</li>
+            <li>User access control to manage who has permission to control the various systems.</li>
+            <li>Alerts and notifications to keep occupants and maintenance personnel informed of any issues or problems.
+            </li>
+        </UL>
+
+        <p>The users of the control interface for a smart building IoT application can be building owners, facility
+            managers, property managers, tenants, and maintenance personnel.</p>
+
+        <p>parts which will make it work</p>
+
+        <ul>
+            <li id="a">Sensors</li>
+            <li id="s">Gateway</li>
+            <li id="d">Cloud or Local Server</li>
+            <li id="f">Application software</li>
+            <li id="g">Network infrastructure</li>
+            <li id="h">Power supply</li>
+            <li id="j">Security measures</li>
+
+        </ul>
+    </div>
+
+ 
+<hr>
+    <h1 class="act4">ABOUT ME</h1>
+
+    <img class="lll" src="/images/Screenshot 2023-02-07 221040.png" alt="">
+    <div class="lastp">
+<p>
+    My name is DHRUV NAINA , roll number 2110994857 I am doing software engineering from chitkara  university and currently
+     I am studying in second year ,fourth semester of my course .
+</p>
+
+<p >I have passed the following units-</p>
+<ul>
+<li>Discrete Mathematics</li>
+<li>Introduction to programming</li>
+<li>software engineering : Robotics Project 1 - GroupB</li>
+<li>embedded System Devlopment</li>
+<li>computer systems</li>
+<li>object oriented Devlopment</li>
+<li>sustainable designe</li>
+</ul>
+
+</div>
+
+
+
+</body>
+
 </html>
